--- a/cpp20_test_2/cpp20_test_2.vcxproj
+++ b/cpp20_test_2/cpp20_test_2.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Downloads\CPlusPlus20ForProgrammers\examples\ch01\GuessNumber.cpp" />
+    <ClCompile Include="welcome_fig02_01.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
